--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Social</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <main>
+        <section id="tel">
+
+        </section>
+        <section id="menu">
+            <img src="imagens/logo-home.jpg" alt="logo-home"><br>
+            <img src="imagens/logo-github.jpg" alt="logo-github"><br>
+            <img src="imagens/logo-facebook.jpg" alt="logo-facebook"><br>
+            <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+        </section>
+    </main>
 </body>
 </html>
