--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
     <main>
         <section id="tel">
-
+            <iframe src="home.html" name="tela" id="tela"></iframe>
         </section>
         <section id="menu">
-            <img src="imagens/logo-home.jpg" alt="logo-home"><br>
-            <img src="imagens/logo-github.jpg" alt="logo-github"><br>
-            <img src="imagens/logo-facebook.jpg" alt="logo-facebook"><br>
-            <img src="imagens/logo-instagram.jpg" alt="logo-instagram">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="logo-home"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a>
         </section>
     </main>
 </body>
