--- a/home.html
+++ b/home.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="estilo/pags.css">
+    
 </head>
 <body>
-    <img src="imagens/tela-home.jpg" alt="tela-home">
+    <img src="imagens/tela.jpg" alt="tela-home">
 </body>
 </html>
